--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ flasgger = "^0.9.7.1"
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.4"
 pytest-flask = "^1.3.0"
+mkdocs-material = "^9.5.5"
 
 [build-system]
 requires = ["poetry-core"]
