--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -32,5 +32,15 @@ jobs:
       with:
         context: .
         push: true
-        tags: ${{ secrets.DOCKERHUB_USERNAME }}/uptime-kuma-rest:${{ github.sha }}
-        platforms: linux/amd64,linux/arm64 
+        tags: |
+          ${{ secrets.DOCKERHUB_USERNAME }}/uptime-kuma-rest:${{ github.sha }}
+          ${{ secrets.DOCKERHUB_USERNAME }}/uptime-kuma-rest:latest
+        platforms: linux/amd64,linux/arm64
+    
+    - name: Update Docker Hub Description
+      uses: peter-evans/dockerhub-description@v4
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+        repository: ${{ secrets.DOCKERHUB_USERNAME }}/uptime-kuma-rest
+        readme-file: README.md
