Update readme-file to readme-filepath in docker-build.yml

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -47,4 +47,4 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
         repository: ${{ secrets.DOCKERHUB_USERNAME }}/uptime-kuma-rest
-        readme-file: README-DOCKER.md
+        readme-filepath: README-DOCKER.md
