--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,4 @@
-attrs==23.2.0 ; python_version >= "3.10" and python_version < "4.0"
-bidict==0.22.1 ; python_version >= "3.10" and python_version < "4"
-blinker==1.7.0 ; python_version >= "3.10" and python_version < "4.0"
-certifi==2023.11.17 ; python_version >= "3.10" and python_version < "4"
-charset-normalizer==3.3.2 ; python_version >= "3.10" and python_version < "4"
-click==8.1.7 ; python_version >= "3.10" and python_version < "4.0"
-colorama==0.4.6 ; python_version >= "3.10" and python_version < "4.0" and platform_system == "Windows"
-flasgger==0.9.7.1 ; python_version >= "3.10" and python_version < "4.0"
-flask==3.0.1 ; python_version >= "3.10" and python_version < "4.0"
-h11==0.14.0 ; python_version >= "3.10" and python_version < "4"
-idna==3.6 ; python_version >= "3.10" and python_version < "4"
-itsdangerous==2.1.2 ; python_version >= "3.10" and python_version < "4.0"
-jinja2==3.1.3 ; python_version >= "3.10" and python_version < "4.0"
-jsonschema-specifications==2023.12.1 ; python_version >= "3.10" and python_version < "4.0"
-jsonschema==4.21.1 ; python_version >= "3.10" and python_version < "4.0"
-markupsafe==2.1.4 ; python_version >= "3.10" and python_version < "4.0"
-mistune==3.0.2 ; python_version >= "3.10" and python_version < "4.0"
-packaging==23.2 ; python_version >= "3.10" and python_version < "4"
-python-dotenv==1.0.1 ; python_version >= "3.10" and python_version < "4.0"
-python-engineio==4.8.2 ; python_version >= "3.10" and python_version < "4"
-python-socketio[client]==5.11.0 ; python_version >= "3.10" and python_version < "4"
-pyyaml==6.0.1 ; python_version >= "3.10" and python_version < "4.0"
-referencing==0.32.1 ; python_version >= "3.10" and python_version < "4.0"
-requests==2.31.0 ; python_version >= "3.10" and python_version < "4"
-rpds-py==0.17.1 ; python_version >= "3.10" and python_version < "4.0"
-simple-websocket==1.0.0 ; python_version >= "3.10" and python_version < "4"
-six==1.16.0 ; python_version >= "3.10" and python_version < "4.0"
-uptime-kuma-api==1.2.1 ; python_version >= "3.10" and python_version < "4"
-urllib3==2.1.0 ; python_version >= "3.10" and python_version < "4"
-websocket-client==1.7.0 ; python_version >= "3.10" and python_version < "4"
-werkzeug==3.0.1 ; python_version >= "3.10" and python_version < "4.0"
-wsproto==1.2.0 ; python_version >= "3.10" and python_version < "4"
+uptime-kuma-api
+flask
+python-dotenv
+flasgger
